simplify officer name model

--- a/specs/EmergencyAuthCodeEligibleOfficers.yml
+++ b/specs/EmergencyAuthCodeEligibleOfficers.yml
@@ -53,8 +53,7 @@ components:
       type: object
       required:
         - id
-        - forename
-        - surname
+        - name
         - officer_role
         - date_of_birth
         - appointed_on
@@ -68,14 +67,10 @@ components:
           description: The id of the user
           readOnly: true
           example: abc123
-        forename:
+        name:
           type: string
-          description: The officers forename
-          example: Joe
-        surname:
-          type: string
-          description: The officers surname
-          example: Bloggs
+          description: The officers name
+          example: Joe Bloggs
         officer_role:
           type: string
           enum:
