--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
         <spring-test.version>5.1.3.RELEASE</spring-test.version>
         <hamcrest.version>2.1</hamcrest.version>
         <org.mapstruct.version>1.3.1.Final</org.mapstruct.version>
-        <structured-logging.version>1.9.3</structured-logging.version>
+        <structured-logging.version>1.5.0-rc2</structured-logging.version>
     </properties>
 
     <dependencies>
