--- a/pom.xml
+++ b/pom.xml
@@ -136,6 +136,11 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>com.google.cloud.tools</groupId>
+                <artifactId>jib-maven-plugin</artifactId>
+                <version>2.6.0</version>
+            </plugin>
         </plugins>
     </build>
 
