--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
         <hamcrest.version>2.1</hamcrest.version>
         <org.mapstruct.version>1.3.1.Final</org.mapstruct.version>
         <structured-logging.version>1.5.0-rc2</structured-logging.version>
+        <version.sonar-maven-plugin>3.7.0.1746</version.sonar-maven-plugin>
     </properties>
 
     <dependencies>
@@ -50,6 +51,12 @@
             <groupId>javax.xml.bind</groupId>
             <artifactId>jaxb-api</artifactId>
             <version>2.3.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.sonarsource.scanner.maven</groupId>
+            <artifactId>sonar-maven-plugin</artifactId>
+            <version>${version.sonar-maven-plugin}</version>
         </dependency>
 
         <!-- Oracle JDBC driver -->
@@ -135,6 +142,11 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.sonarsource.scanner.maven</groupId>
+                <artifactId>sonar-maven-plugin</artifactId>
+                <version>3.7.0.1746</version>
             </plugin>
             <plugin>
                 <groupId>com.google.cloud.tools</groupId>
