--- a/pom.xml
+++ b/pom.xml
@@ -5,10 +5,10 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>uk.gov.companieshouse</groupId>
-        <artifactId>companies-house-spring-boot-parent</artifactId>
-        <version>1.4.0</version>
-        <relativePath/>
+        <artifactId>companies-house-parent</artifactId>
+        <version>1.3.0</version>
     </parent>
+
     <groupId>uk.gov.companieshouse</groupId>
     <artifactId>oracle-query-api</artifactId>
     <version>unversioned</version>
@@ -16,28 +16,30 @@
     <description>App for querying oracle databases</description>
 
     <properties>
+        <spring.boot.version>2.4.0</spring.boot.version>
         <java.version>1.8</java.version>
         <structured-logging.version>1.5.0-rc2</structured-logging.version>
         <thymeleaf-layout-dialect.version>2.3.0</thymeleaf-layout-dialect.version>
-        <junit-jupiter-engine.version>5.2.0</junit-jupiter-engine.version>
-        <mockito-junit-jupiter.version>2.18.0</mockito-junit-jupiter.version>
         <sdk-manager-java.version>1.5.2</sdk-manager-java.version>
         <api-sdk-java.version>4.2.7</api-sdk-java.version>
         <spring-test.version>5.1.3.RELEASE</spring-test.version>
         <hamcrest.version>2.1</hamcrest.version>
         <org.mapstruct.version>1.3.1.Final</org.mapstruct.version>
         <structured-logging.version>1.5.0-rc2</structured-logging.version>
+        <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+            <version>${spring.boot.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
+            <version>${spring.boot.version}</version>
         </dependency>
 
         <dependency>
@@ -61,18 +63,6 @@
 
         <!-- Testing Dependencies-->
         <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-engine</artifactId>
-            <version>${junit-jupiter-engine.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.mockito</groupId>
-            <artifactId>mockito-junit-jupiter</artifactId>
-            <version>${mockito-junit-jupiter.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest</artifactId>
             <version>${hamcrest.version}</version>
@@ -80,6 +70,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
+            <version>${spring.boot.version}</version>
             <scope>test</scope>
             <exclusions>
                 <exclusion>
@@ -95,10 +86,12 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>${spring.boot.version}</version>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.0</version>
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
@@ -150,4 +143,3 @@
     </build>
 
 </project>
-:
