--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
         <structured-logging.version>1.5.0-rc2</structured-logging.version>
         <thymeleaf-layout-dialect.version>2.3.0</thymeleaf-layout-dialect.version>
         <sdk-manager-java.version>1.5.2</sdk-manager-java.version>
-        <api-sdk-java.version>4.2.7</api-sdk-java.version>
+        <api-sdk-java.version>4.3.7</api-sdk-java.version>
         <spring-test.version>5.1.3.RELEASE</spring-test.version>
         <hamcrest.version>2.1</hamcrest.version>
         <org.mapstruct.version>1.3.1.Final</org.mapstruct.version>
@@ -66,6 +66,13 @@
             <groupId>javax.xml.bind</groupId>
             <artifactId>jaxb-api</artifactId>
             <version>2.3.1</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>uk.gov.companieshouse</groupId>
+            <artifactId>api-sdk-java</artifactId>
+            <version>${api-sdk-java.version}</version>
+            <scope>compile</scope>
         </dependency>
 
         <!-- Oracle JDBC driver -->
