NCS-588 schema update for pscs and psc database query join updated.

--- a/specs/OracleQueries.yml
+++ b/specs/OracleQueries.yml
@@ -191,7 +191,21 @@ paths:
                 $ref: '#/components/schemas/filing-history'
         '404':
           description: No filing history found
-
+  /company/{company_number}/corporate-body-appointments/persons-of-significant-control:
+    parameters:
+      - $ref: '#/components/parameters/companyNumber'
+    get:
+      tags:
+        - persons-of-significant-control
+      operationId: getPeopleWithSignificantControl
+      summary: Get a list of people of significant control for the company
+      responses:
+        '200':
+          description: 'Persons of significant control data'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/personsOfSignificantControl'
 components:
   schemas:
     companyOfficer:
@@ -672,6 +686,117 @@ components:
           type: string
           description: The type of filing history transaction
           example: "SH01"
+    personsOfSignificantControl:
+      type: object
+      required:
+        - corporateBodyAppointmentId
+        - officerForename1
+        - officerForename2
+        - officerSurname
+        - appointmentTypeId
+        - serviceAddressLine1
+        - serviceAddressPostCode
+        - serviceAddressPostTown
+        - officerNationality
+        - officerDateOfBirth
+        - houseNameNumber
+        - street
+        - area
+        - postTown
+        - postCode
+        - region
+        - countryName
+        - suppliedCompanyName
+        - poBox
+        - addressLine1
+        - natureOfControl
+        - registrationNumber
+        - lawGoverned
+        - legalForm
+        - countryOfResidence
+      properties:
+        corporateBodyAppointmentId:
+          type: integer
+          description: database primary key of psc
+        officerForename1:
+          type: string
+          description: First name of the officer
+        officerForename2:
+          type: string
+          description: Other name of the officer
+        officerSurname:
+          type: string
+          description: Fmaily name of the officer
+        appointmentTypeId:
+          type: string
+          description: Numerical code reference to type of psc person or relevant legal entity
+          example: "5007"
+        serviceAddressLine1:
+          type: string
+          description: First line of address house name or number and street
+        serviceAddressPostCode:
+          type: string
+          description: Area post code
+        serviceAddressPostTown:
+          type: string
+          description: Town
+        officerNationality:
+          type: string
+          description: Nationality
+        officerDateOfBirth:
+          type: string
+          description: The officer date of birth
+          example: "1970-01-01"
+        houseNameNumber:
+          type: string
+          description: House name or number
+        street:
+          type: string
+          description: Street
+        area:
+          type: string
+          description: Village or town district
+        postTown:
+          type: string
+          description: Town or city
+        postCode:
+          type: string
+          description: Post code
+        region:
+          type: string
+          description: County
+        countryName:
+          type: string
+          description: Country
+        suppliedCompanyName:
+          type: string
+          description: name of company corresponding to the company number
+        poBox:
+          type: string
+          description: Po box
+        addressLine1:
+          type: string
+          description: Address
+        natureOfControl:
+          type: string
+          description: Extent and nature of control of the psc in the company
+          example: "75% or more of shares held as a person"
+        registrationNumber:
+          type: string
+          description: Registration number of rle
+          example: "04112451"
+        lawGoverned:
+          type: string
+          description: System of law or specific law passed applicable to an rle
+          example: "COMPANIES ACT 2006"
+        legalForm:
+          type: string
+          description: Type of company
+          example: "LIMITED COMPANY"
+        countryOfResidence:
+          type: string
+          description: Country rle is located in
+          example: "ENGLAND"
   parameters:
     companyNumber:
       name: 'company_number'
