Make ShareholderRepository pageable and remove addressID from shareholder object

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,9 @@ spring.datasource.driver.class=oracle.jdbc.driver.OracleDriver
 spring.jpa.hibernate.ddl-auto=none
 spring.jps.database-platform=org.hibernate.dialect.OracleDialect
 spring.jpa.show-sql=true
+
+
+# ---------
+# spring.datasource.url=jdbc:oracle:thin:@chd-chipsdb:1521:chipsdev
+# spring.datasource.username=CAPDEVAB2
+# spring.datasource.password=CAPDEVAB2
