--- a/specs/OracleQueries.yml
+++ b/specs/OracleQueries.yml
@@ -651,10 +651,10 @@ components:
           type: string
           description: The full date of birth of the active director
         serviceAddress:
-          type: Address
+          type: object
           description: The service address of the active director
         residentialAddress:
-          type: Address
+          type: object
           description: The Usual Residential Address (URA) of the active director
     filingHistoryList:
       type: object
@@ -862,19 +862,19 @@ components:
           type: string
           description: The surname of the shareholder
         addressId:
-          type: long
+          type: integer
           description: The numerical id for the address of the shareholder
           example: "3063647053"
         shares:
-          type: long
+          type: integer
           description: The number of shares held by the shareholder
           example: "1000"
         shareClassTypeId:
-          type: long
+          type: integer
           description: The numerical id for the class of share held by the shareholder
           example: "1"
         currencyTypeId:
-          type: long
+          type: integer
           description: The numerical id for the currency held by the shareholder
           example: "826"
     confirmationStatementPayment:
